--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,14 @@
 [package]
 name = "FerriteChatter"
 version = "0.1.0"
+authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
+description = "ChatGPT CLI"
+license = "MIT"
+readme = "README.md"
 
 [[bin]]
-name = "fc"
+name = "chat"
 path = "src/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
