--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "0.5.0"
+version = "1.0.0"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -10,6 +10,10 @@ readme = "README.md"
 [[bin]]
 name = "fchat"
 path = "src/main.rs"
+
+[[bin]]
+name = "fask"
+path = "src/ask.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
