impl editor command

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "1.1.0"
+version = "1.2.0"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -19,7 +19,7 @@ path = "src/ask.rs"
 
 [dependencies]
 anyhow = "1.0.70"
-clap = { version="4.2.1", features = ["derive"] }
-inquire = "0.6.1"
+clap = { version="4.2.1", features=["derive"] }
+inquire = { version="0.6.1", features=["editor"] }
 openai = "1.0.0-alpha.8"
 tokio = { version="1.27.0", features=["full"] }
