--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Run cargo fmt
         run: cargo fmt --check
       - name: Run cargo check
-        run: cargo check --all-targets
+        run: OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }} cargo check --all-targets
