--- a/ferrite_model_gen/Cargo.toml
+++ b/ferrite_model_gen/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "ferrite_model_gen"
 version = "0.1.0"
+authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
+description = "ChatGPT CLI"
+license = "MIT"
 
 [dependencies]
 anyhow = "1.0.89"
