--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "6.1.1"
+version = "6.2.0"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -22,11 +22,11 @@ path = "src/bin/ftrans.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.95"
+anyhow = "1.0.97"
 clap = { version="4.5.32", features=["derive"] }
 inquire = { version="0.7.5", features=["editor"] }
-openai = "1.0.0-alpha.19"
-serde = { version = "1.0.217", features = ["derive"] }
+openai = "1.0.0"
+serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 tia = "1.0.3"
 tokio = { version="1.43.0", features=["full"] }
