--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,4 +30,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 tia = "1.0.3"
 tokio = { version="1.45.1", features=["full"] }
-ferrite_model_gen = "0.3.0"
+ ferrite_model_gen = "0.3.0"
+ limbo = "0.0.22"
+ rand = { version = "0.8", features = ["std"] }
+ serde_json = "1.0"
