--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,6 @@ serde_yaml = "0.9.34"
 tia = "1.0.3"
 tokio = { version="1.45.1", features=["full"] }
  ferrite_model_gen = "0.3.0"
- limbo = "0.0.22"
+ rusqlite = { version = "0.29.0", features = ["bundled"] }
  rand = { version = "0.8", features = ["std"] }
  serde_json = "1.0"
