--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "8.0.0"
+version = "8.1.0"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -31,8 +31,8 @@ serde_yaml = "0.9.34"
 tia = "1.0.3"
 tokio = { version="1.47.1", features=["full"] }
 ferrite_model_gen = "0.3.0"
-rand = { version = "0.8", features = ["std"] }
+rand = { version = "0.9", features = ["std"] }
 serde_json = "1.0"
-viuer = "0.5"
-base64 = "0.21"
-reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
+viuer = { version = "0.9", features = ["print-file"] }
+base64 = "0.22"
+reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
