--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,13 +23,16 @@ path = "src/bin/ftrans.rs"
 
 [dependencies]
 anyhow = "1.0.98"
-clap = { version="4.5.41", features=["derive"] }
+clap = { version="4.5.43", features=["derive"] }
 inquire = { version="0.7.5", features=["editor"] }
 openai = "1.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
 tia = "1.0.3"
-tokio = { version="1.47.0", features=["full"] }
+tokio = { version="1.47.1", features=["full"] }
 ferrite_model_gen = "0.3.0"
 rand = { version = "0.8", features = ["std"] }
 serde_json = "1.0"
+viuer = "0.5"
+base64 = "0.21"
+reqwest = { version = "0.11", features = ["json", "rustls-tls", "multipart"] }
