--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "8.1.0"
+version = "9.0.0"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -19,12 +19,16 @@ path = "src/bin/fask.rs"
 name = "ftrans"
 path = "src/bin/ftrans.rs"
 
+[[bin]]
+name = "fimg"
+path = "src/bin/fimg.rs"
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 anyhow = "1.0.99"
 clap = { version="4.5.43", features=["derive"] }
-inquire = { version="0.7.5", features=["editor"] }
+inquire = { version="0.9.1", features=["editor"] }
 openai = "1.1.1"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_yaml = "0.9.34"
