--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "FerriteChatter"
-version = "9.0.0"
+version = "9.0.1"
 authors = ["n01e0 <reoshiseki@gmail.com>"]
 edition = "2021"
 description = "ChatGPT CLI"
@@ -26,17 +26,18 @@ path = "src/bin/fimg.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.99"
-clap = { version="4.5.43", features=["derive"] }
+anyhow = "1.0.100"
+clap = { version="4.5.51", features=["derive"] }
 inquire = { version="0.9.1", features=["editor"] }
 openai = "1.1.1"
-serde = { version = "1.0.219", features = ["derive"] }
+serde = { version = "1.0.228", features = ["derive"] }
 serde_yaml = "0.9.34"
 tia = "1.0.3"
-tokio = { version="1.47.1", features=["full"] }
+tokio = { version="1.48.0", features=["full"] }
 ferrite_model_gen = "0.3.0"
 rand = { version = "0.9", features = ["std"] }
 serde_json = "1.0"
 viuer = { version = "0.9", features = ["print-file"] }
 base64 = "0.22"
 reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
+futures-util = "0.3"
